--- a/EX010/index.html
+++ b/EX010/index.html
@@ -10,5 +10,17 @@
     <h1>Usando links externos</h1>
     <p>Você pode acessar o meu <a href="https://github.com/jcjessicarmo/cursoHTML5eCSS3" target="_blank">repositório público no GitHub</a> </p>
     
+    <p>Você pode acessar o GitHub do Professor Guanabara <a href="https://gustavoguanabara.github.io/" target="_blank" rel="external">repositório público no GitHub</a></p>
+    <p>Você também pode acessar o canal do YouTube do Professor Guanabara <a href="https://youtube.com/cursoemvideo/" target="_blank" rel="external">canal gratuito no YouTube</a></p>
+
+    <h1>Usando links internos</h1>
+    <p>Esta é a primeira página do site. Se você quiser, pode acessar também a <a href="pag002.html" rel="next" target="_self">segunda página</a></p>
+    <p>Você também pode acessar a nossa <a href="noticias/pag003.html" rel="next" target="_self">página de notícias</a></p>
+
+    <h1>Links para download</h1>
+    <ul>
+        <li><a href="livro/meulivro.pdf" download="meulivro.pdf" type="application/pdf">Baixar o livro em PDF</a></li>
+        <li><a href="livro/meulivro.zip" download="meulivro.zip" type="application/zip">Livro compactado em ZIP</a></li>
+    </ul>
 </body>
 </html>
