--- a/EX011/index.html
+++ b/EX011/index.html
@@ -19,5 +19,18 @@
         <source media="(max-width: 1050px)" srcset="imagens/foto-m.png" type="image/png">
         <img src="imagens/foto-g.png" alt="Imagem flexível">
     </picture>
+
+    <h1>Reproduzir áudio</h1>
+    <p>Vamos aprender a reproduzir áudios em HTML5</p>
+    <!-- <audio src="midias/SpaceAgeHustle-SquaddaB.mp3" controls autoplay></audio>
+    Funciona para alguns navegadores --> 
+    <audio preload="metadata" autoplay controls>
+        <source src="midias/SpaceAgeHustle-SquaddaB.mp3" type="audio/mp3">
+        <source src="midias/SpaceAgeHustle-SquaddaB.ogg" type="audio/ogg">
+        <source src="midias/SpaceAgeHustle-SquaddaB.wav" type="audio/wav">
+        <p>Infelizmente seu navegador não consegue resproduzir áudio.</p>
+        <a href= "midias/SpaceAgeHustle-SquaddaB.mp3">Clique aqui para baixar o áudio!</a>
+    </audio>
+
 </body>
 </html>
